# tkintertester

./: .gitignore  README.md  claude.json  claude.md  pyproject.toml  spec.json  tkintertester_spec.json
docs/: reference.md  with-lionscliapp.json  with-lionscliapp.md
docs/spec/: tkintertester_spec.json
examples/: simple_counter.py  w_lionscliapp.py
src/tkintertester/: __init__.py  harness.py
src/tkintertester.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: check.py  run.py
